refactor: test getAll